--- a/Face Recognition.ipynb
+++ b/Face Recognition.ipynb
@@ -16,6 +16,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#there is no label 0 in our training data so subject name for index/label 0 is empty\n",
+    "subjects = [\"\", \"Ramiz Raja\", \"Elvis Presley\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'gray' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-cbccac1138e0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;31m#let's detect multiscale images(some images may be closer to camera than others)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;31m#result is a list of faces\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m \u001b[0mfaces\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mface_cascade\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdetectMultiScale\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscaleFactor\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1.2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mminNeighbors\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;31m#if no faces are detected then return original img\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'gray' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#function to detect face using OpenCV\n",
+    "def detect_face(img):\n",
+    "#convert the test image to gray scale as opencv face detector expects gray images\n",
+    " gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "#load OpenCV face detector, I am using LBP which is fast\n",
+    "#there is also a more accurate but slow: Haar classifier\n",
+    "face_cascade = cv2.CascadeClassifier('opencv-files/lbpcascade_frontalface.xml')\n",
+    "\n",
+    "#let's detect multiscale images(some images may be closer to camera than others)\n",
+    "#result is a list of faces\n",
+    "faces = face_cascade.detectMultiScale(gray, scaleFactor=1.2, minNeighbors=5);\n",
+    "\n",
+    "#if no faces are detected then return original img\n",
+    "if (len(faces) == 0):\n",
+    "    return None, None\n",
+    "\n",
+    "#under the assumption that there will be only one face,\n",
+    "#extract the face area\n",
+    "(x, y, w, h) = faces[0]\n",
+    "\n",
+    "#return only the face part of the image\n",
+    "return gray[y:y+w, x:x+h], faces[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
