inside data directory

--- a/Face Recognition.ipynb
+++ b/Face Recognition.ipynb
@@ -57,14 +57,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def prepare_training_data(data_folder_path):\n",
     " \n",
     "    #get the directories (one directory for each subject) in data folder\n",
-    "    dirs = os.listdir(data_folder_path)\n",
+    "    dirs = os.listdir(testing-data)\n",
     " \n",
     "    #list to hold all subject faces\n",
     "    faces = []\n",
@@ -73,12 +73,30 @@
     " \n",
     "    #let's go through each directory and read images within it\n",
     "    for dir_name in dirs:\n",
+    "        #our subject directories start with letter 's' so\n",
+    "        #ignore any non-relevant directories if any\n",
+    "        if not dir_name.startswith(\"s\"):\n",
+    "            continue;\n",
+    "            \n",
+    "    #extract label number of subject from dir_name\n",
+    "    #format of dir name = slabel\n",
+    "    #, so removing letter 's' from dir_name will give us label\n",
+    "    label = int(dir_name.replace(\"s\", \"\"))\n",
     " \n",
-    "    #our subject directories start with letter 's' so\n",
-    "    #ignore any non-relevant directories if any\n",
-    "    if not dir_name.startswith(\"s\"):\n",
-    "        continue;"
+    "    #build path of directory containing images for current subject subject\n",
+    "    #sample subject_dir_path = \"training-data/s1\"\n",
+    "    subject_dir_path = testing-data\"\" + \"/\" + dir_name\n",
+    "    \n",
+    "    #get the images names that are inside the given subject directory\n",
+    "    subject_images_names = os.listdir(subject_dir_path)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
