--- a/Face Recognition.ipynb
+++ b/Face Recognition.ipynb
@@ -62,9 +62,10 @@
    "outputs": [],
    "source": [
     "def prepare_training_data(data_folder_path):\n",
-    " \n",
+    "     \n",
+    "    # STEP 1    \n",
     "    #get the directories (one directory for each subject) in data folder\n",
-    "    dirs = os.listdir(testing-data)\n",
+    "    dirs = os.listdir(data_folder_path)\n",
     " \n",
     "    #list to hold all subject faces\n",
     "    faces = []\n",
@@ -77,7 +78,8 @@
     "        #ignore any non-relevant directories if any\n",
     "        if not dir_name.startswith(\"s\"):\n",
     "            continue;\n",
-    "            \n",
+    "    \n",
+    "    # STEP 2\n",
     "    #extract label number of subject from dir_name\n",
     "    #format of dir name = slabel\n",
     "    #, so removing letter 's' from dir_name will give us label\n",
@@ -85,10 +87,33 @@
     " \n",
     "    #build path of directory containing images for current subject subject\n",
     "    #sample subject_dir_path = \"training-data/s1\"\n",
-    "    subject_dir_path = testing-data\"\" + \"/\" + dir_name\n",
+    "    subject_dir_path = data_folder_path + \"/\" + dir_name\n",
     "    \n",
     "    #get the images names that are inside the given subject directory\n",
-    "    subject_images_names = os.listdir(subject_dir_path)"
+    "    subject_images_names = os.listdir(subject_dir_path)\n",
+    "    \n",
+    "    # STEP 3\n",
+    "    #go through each image name, read image, \n",
+    "    #detect face and add face to list of faces\n",
+    "    for image_name in subject_images_names:\n",
+    "\n",
+    "        #ignore system files like .DS_Store\n",
+    "        if image_name.startswith(\".\"):\n",
+    "        continue;\n",
+    "\n",
+    "        #build image path\n",
+    "        #sample image path = training-data/s1/1.pgm\n",
+    "        image_path = subject_dir_path + \"/\" + image_name\n",
+    "\n",
+    "        #read image\n",
+    "        image = cv2.imread(image_path)\n",
+    "\n",
+    "        #display an image window to show the image \n",
+    "        cv2.imshow(\"Training on image...\", image)\n",
+    "        cv2.waitKey(100)\n",
+    "\n",
+    "        #detect face\n",
+    "        face, rect = detect_face(image)"
    ]
   },
   {
