--- a/Face Recognition.ipynb
+++ b/Face Recognition.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
     "\n",
     "        #ignore system files like .DS_Store\n",
     "        if image_name.startswith(\".\"):\n",
-    "        continue;\n",
+    "            continue;\n",
     "\n",
     "        #build image path\n",
     "        #sample image path = training-data/s1/1.pgm\n",
@@ -113,7 +113,49 @@
     "        cv2.waitKey(100)\n",
     "\n",
     "        #detect face\n",
-    "        face, rect = detect_face(image)"
+    "        face, rect = detect_face(image)\n",
+    "        \n",
+    "        # STEP 4\n",
+    "        #we will ignore faces that are not detected\n",
+    "        if face is not None:\n",
+    "            #add face to list of faces\n",
+    "            faces.append(face)\n",
+    "            #add label for this face\n",
+    "            labels.append(label)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preparing data...\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-8b858a7a4e43>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Preparing data...\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mfaces\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabels\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mprepare_training_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"training-data\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Data prepared\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m#print total faces and labels\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Preparing data...\")\n",
+    "faces, labels = prepare_training_data(\"training-data\")\n",
+    "print(\"Data prepared\")\n",
+    "\n",
+    "#print total faces and labels\n",
+    "print(\"Total faces: \", len(faces))\n",
+    "print(\"Total labels: \", len(labels))"
    ]
   },
   {
