--- a/Face Recognition.ipynb
+++ b/Face Recognition.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,9 +127,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preparing data...\n",
+      "Data prepared\n",
+      "Total faces:  23\n",
+      "Total labels:  23\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Preparing data...\")\n",
     "faces, labels = prepare_training_data(\"training-data\")\n",
@@ -138,6 +149,41 @@
     "print(\"Total faces: \", len(faces))\n",
     "print(\"Total labels: \", len(labels))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'cv2.face' has no attribute 'createLBPHFaceRecognizer'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-82d5efce6638>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#create our LBPH face recognizer\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mface_recognizer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mface\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcreateLBPHFaceRecognizer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m#or use EigenFaceRecognizer by replacing above line with\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m#face_recognizer = cv2.face.createEigenFaceRecognizer()\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'cv2.face' has no attribute 'createLBPHFaceRecognizer'"
+     ]
+    }
+   ],
+   "source": [
+    "#create our LBPH face recognizer \n",
+    "face_recognizer = cv2.face.LBPHFaceRecognizer_cre()\n",
+    "\n",
+    "#or use EigenFaceRecognizer by replacing above line with \n",
+    "#face_recognizer = cv2.face.createEigenFaceRecognizer()\n",
+    "\n",
+    "#or use FisherFaceRecognizer by replacing above line with \n",
+    "#face_recognizer = cv2.face.createFisherFaceRecognizer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
