--- a/Face Recognition.ipynb
+++ b/Face Recognition.ipynb
@@ -152,30 +152,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'cv2.face' has no attribute 'createLBPHFaceRecognizer'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-82d5efce6638>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#create our LBPH face recognizer\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mface_recognizer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mface\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcreateLBPHFaceRecognizer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m#or use EigenFaceRecognizer by replacing above line with\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m#face_recognizer = cv2.face.createEigenFaceRecognizer()\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'cv2.face' has no attribute 'createLBPHFaceRecognizer'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#create our LBPH face recognizer \n",
-    "face_recognizer = cv2.face.LBPHFaceRecognizer_cre()\n",
+    "face_recognizer = cv2.face.LBPHFaceRecognizer_create()\n",
     "\n",
     "#or use EigenFaceRecognizer by replacing above line with \n",
     "#face_recognizer = cv2.face.createEigenFaceRecognizer()\n",
     "\n",
     "#or use FisherFaceRecognizer by replacing above line with \n",
     "#face_recognizer = cv2.face.createFisherFaceRecognizer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "face_recognizer.train(faces, np.array(labels))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#function to draw rectangle on image \n",
+    "#according to given (x, y) coordinates and \n",
+    "#given width and heigh\n",
+    "def draw_rectangle(img, rect):\n",
+    "    (x, y, w, h) = rect\n",
+    "    cv2.rectangle(img, (x, y), (x+w, y+h), (0, 255, 0), 2)\n",
+    " \n",
+    "#function to draw text on give image starting from\n",
+    "#passed (x, y) coordinates. \n",
+    "def draw_text(img, text, x, y):\n",
+    "    cv2.putText(img, text, (x, y), cv2.FONT_HERSHEY_PLAIN, 1.5, (0, 255, 0), 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#this function recognizes the person in image passed\n",
+    "#and draws a rectangle around detected face with name of the \n",
+    "#subject\n",
+    "def predict(test_img):\n",
+    "    #make a copy of the image as we don't want to change original image\n",
+    "    img = test_img.copy()\n",
+    "    #detect face from the image\n",
+    "    face, rect = detect_face(img)\n",
+    "\n",
+    "    #predict the image using our face recognizer \n",
+    "    label = face_recognizer.predict(face)\n",
+    "    #get name of respective label returned by face recognizer\n",
+    "    label_text = subjects[label]\n",
+    "\n",
+    "    #draw a rectangle around face detected\n",
+    "    draw_rectangle(img, rect)\n",
+    "    #draw name of predicted person\n",
+    "    draw_text(img, label_text, rect[0], rect[1]-5)\n",
+    "\n",
+    "    return img"
    ]
   },
   {
